tests/machine/x/cobol/string_concat.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. STRING_CONCAT.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TMP PIC 9 VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE TMP = "hello " + "world"
       DISPLAY TMP
       STOP RUN.
